# facebook-library-ads-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/facebook_ads_library_mcp/: cache.py  client.py  constants.py  filters.py  prompts.py  server.py  spam_detection.py  taxonomy.py
src/facebook_ads_library_mcp/tools/: __init__.py  advanced.py  cache_admin.py  compare.py  discovery.py  export.py  landing.py  moderation.py  search.py  shopify.py  trends.py  validate.py
