[project]
name = "facebook-ads-library-mcp"
version = "0.1.0"
description = "MCP server for the Facebook Ads Library API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
facebook-ads-library-mcp = "facebook_ads_library_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/facebook_ads_library_mcp"]
